--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <!-- Enlaces a los incas -->
     <div class="enlaces">
-      <a href="#">Manco Cápac</a>
+      <a href="https://xio356.github.io/MancoCapac/">Manco Cápac</a>
       <a href="#">Sinchi Roca</a>
       <a href="#">Lloque Yupanqui</a>
       <a href="#">Mayta Cápac</a>
@@ -41,3 +41,4 @@
   </section>
 </body>
 </html>
+
