--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Enlaces a los incas -->
     <div class="enlaces">
       <a href="https://xio356.github.io/MancoCapac/">Manco Cápac</a>
-      <a href="#">Sinchi Roca</a>
+      <a href="https://xio356.github.io/SinchiRoca/">Sinchi Roca</a>
       <a href="#">Lloque Yupanqui</a>
       <a href="#">Mayta Cápac</a>
       <a href="#">Cápac Yupanqui</a>
@@ -41,4 +41,5 @@
   </section>
 </body>
 </html>
+
 
