--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="enlaces">
       <a href="https://xio356.github.io/MancoCapac/">Manco Cápac</a>
       <a href="https://xio356.github.io/SinchiRoca/">Sinchi Roca</a>
-      <a href="#">Lloque Yupanqui</a>
+      <a href="https://xio356.github.io/LloqueYupanqui/">Lloque Yupanqui</a>
       <a href="#">Mayta Cápac</a>
       <a href="#">Cápac Yupanqui</a>
       <a href="#">Inca Roca</a>
@@ -41,5 +41,6 @@
   </section>
 </body>
 </html>
+
 
 
