--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <a href="https://xio356.github.io/MancoCapac/">Manco Cápac</a>
       <a href="https://xio356.github.io/SinchiRoca/">Sinchi Roca</a>
       <a href="https://xio356.github.io/LloqueYupanqui/">Lloque Yupanqui</a>
-      <a href="#">Mayta Cápac</a>
+      <a href="https://xio356.github.io/MaytaCapac/">Mayta Cápac</a>
       <a href="#">Cápac Yupanqui</a>
       <a href="#">Inca Roca</a>
       <a href="#">Yahuar Huácac</a>
@@ -41,6 +41,7 @@
   </section>
 </body>
 </html>
+
 
 
 
