--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <a href="https://xio356.github.io/LloqueYupanqui/">Lloque Yupanqui</a>
       <a href="https://xio356.github.io/MaytaCapac/">Mayta Cápac</a>
       <a href="https://xio356.github.io/CapacYupanqui/">Cápac Yupanqui</a>
-      <a href="#">Inca Roca</a>
+      <a href="https://xio356.github.io/IncaRoca/">Inca Roca</a>
       <a href="#">Yahuar Huácac</a>
       <a href="#">Viracocha Inca</a>
       <a href="#">Pachacútec</a>
