--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <a href="https://xio356.github.io/MaytaCapac/">Mayta Cápac</a>
       <a href="https://xio356.github.io/CapacYupanqui/">Cápac Yupanqui</a>
       <a href="https://xio356.github.io/IncaRoca/">Inca Roca</a>
-      <a href="#">Yahuar Huácac</a>
+      <a href="https://xio356.github.io/YahuarHuacac/">Yahuar Huácac</a>
       <a href="#">Viracocha Inca</a>
       <a href="#">Pachacútec</a>
       <a href="#">Túpac Yupanqui</a>
@@ -41,6 +41,7 @@
   </section>
 </body>
 </html>
+
 
 
 
