--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <a href="https://xio356.github.io/CapacYupanqui/">Cápac Yupanqui</a>
       <a href="https://xio356.github.io/IncaRoca/">Inca Roca</a>
       <a href="https://xio356.github.io/YahuarHuacac/">Yahuar Huácac</a>
-      <a href="#">Viracocha Inca</a>
+      <a href="https://xio356.github.io/ViracochaInca/">Viracocha Inca</a>
       <a href="#">Pachacútec</a>
       <a href="#">Túpac Yupanqui</a>
       <a href="#">Huayna Cápac</a>
@@ -41,6 +41,7 @@
   </section>
 </body>
 </html>
+
 
 
 
