--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <a href="https://xio356.github.io/ViracochaInca/">Viracocha Inca</a>
       <a href="https://xio356.github.io/Pachacutec/">Pachacútec</a>
       <a href="https://xio356.github.io/TupacYupanqui/">Túpac Yupanqui</a>
-      <a href="#">Huayna Cápac</a>
+      <a href="https://xio356.github.io/HuaynaCapac/">Huayna Cápac</a>
       <a href="#">Huáscar</a>
       <a href="#">Atahualpa</a>
       <a href="#">Túpac Amaru I</a>
@@ -41,6 +41,7 @@
   </section>
 </body>
 </html>
+
 
 
 
