--- a/index.html
+++ b/index.html
@@ -34,13 +34,14 @@
       <a href="https://xio356.github.io/TupacYupanqui/">Túpac Yupanqui</a>
       <a href="https://xio356.github.io/HuaynaCapac/">Huayna Cápac</a>
       <a href="https://xio356.github.io/Huascar/">Huáscar</a>
-      <a href="#">Atahualpa</a>
+      <a href="https://xio356.github.io/atahualpa/">Atahualpa</a>
       <a href="#">Túpac Amaru I</a>
     </div>
 
   </section>
 </body>
 </html>
+
 
 
 
