--- a/index.html
+++ b/index.html
@@ -35,12 +35,13 @@
       <a href="https://xio356.github.io/HuaynaCapac/">Huayna Cápac</a>
       <a href="https://xio356.github.io/Huascar/">Huáscar</a>
       <a href="https://xio356.github.io/atahualpa/">Atahualpa</a>
-      <a href="#">Túpac Amaru I</a>
+      <a href="https://xio356.github.io/TupacAmaru1/">Túpac Amaru I</a>
     </div>
 
   </section>
 </body>
 </html>
+
 
 
 
